# nannou-genart

./: Cargo.toml  README.md
challenge/: bouncing-ball.rs  random-walker.rs  simple-bouncing.rs
genart/: spiral.rs
guru/: light.rs  open_simplex.rs  particles.rs  perlin_noise.rs  sinewave.rs
mactuitui/: universe.rs
mitchmindtree/: aquatic-juice.rs  delicate-umbrella.rs  rainy-grandfather.rs  sloppy-roof.rs  uppity-parcel.rs
natureofcode/: force-1.rs  force-2.rs  vector-1.rs
necessarydisorder/: scalar-fields.rs  vector-fields.rs
nick/: 20200315.rs  attractor.rs  circle-packing.rs  flow1.rs  flow2.rs  joy-division.rs  line.rs  noise-loops.rs  noise1.rs  test.rs  tixy.rs
random_and_noise/: m_1_5_03.rs
schotter/: schotter4.rs
templates/: app.rs  sketch.rs
xinnuo/: l1.rs  l2.rs  l2_1.rs  l3.rs
